# mirror-up

./: .bumpversion.cfg  .gitignore  AUTHORS.rst  HISTORY.rst  LICENSE  README.rst  pyproject.toml  results.txt  urls
.github/: ISSUE_TEMPLATE.md
docs/: conf.py  index.rst  installation.rst  usage.rst
mirror_up/: __init__.py  __main__.py  _utils.py  mirror_ace.py  mirror_ace_cli.py
tests/: __init__.py  test_mirror_up.py
