[tool]
[tool.poetry]
name = "mirror_up"
version = "0.1.6"
homepage = "https://github.com/mycsina/mirror_up"
description = "Upload files to online mirroring services."
authors = ["Mycsina <mycsina@protonmail.com>"]
readme = "README.rst"
license =  "MIT"
classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: End Users/Desktop',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.10',
]
packages = [
    { include = "mirror_up" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
httpx = "0.23.0"
trio = "^0.20.0"
typer = "^0.4.0"
alive-progress = "^2.3.1"
python-dotenv = "0.20.0"
format-byte = "^1.1.1"
multivolumefile = "^0.2.3"
pyperclip = "^1.8.2"
notify-py = "^0.3.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
isort = "^5.10.1"
flake8-bugbear = "^22.1.11"
flake8-comprehensions = "^3.8.0"
flake8-annotations = "^2.7.0"
dlint = "^0.12.0"
flake8-builtins = "^1.5.3"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.5"
pydocstyle = "^6.1.1"
restructuredtext-lint = "^1.4.0"
pep8-naming = "^0.12.1"
flake8-simplify = "^0.18.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"